--- a/src/components/EasterEgg.astro
+++ b/src/components/EasterEgg.astro
@@ -1,8 +1,12 @@
 ---
 ---
 
-<h1 class="text-5xl font-bold my-5" id="easterEgg1">General Kenobi!</h1>
-<h1 class="text-3xl font-semibold mt-3 mb-8" id="easterEgg2">... And a huge Star Wars Fan!</h1>
-<p class="text-xl">The Clone Wars is peak Star Wars 📈. Rebels is pretty good too. 
-    Empire Strikes back, Revenge of the Sith and Rogue One are top tier movies 🎬. 
-    Don't talk to me about the sequels, they don't exist😤. Also, how good is Lego Star Wars?! 🔥</p>
+<h1 class="text-5xl font-bold my-5" id="easterEgg1">I am Kira!</h1>
+<h1 class="text-3xl font-semibold mt-3 mb-8" id="easterEgg2">... And a Huge Death Note Fan!</h1>
+<p class="text-xl">
+Death Note is the pinnacle of psychological thrillers 📖. The battle of wits between Light Yagami and L is unmatched 🧠.  
+"Silence" and "L's Theme" are absolute masterpieces in anime soundtracks 🎶.  
+The first 25 episodes are legendary 🕊️ (we don't talk about what came after 😅).  
+Ryuk's love for apples? Iconic 🍎. Also, how awesome is it to imagine writing names in a Death Note? (For justice, of course!) 🖋️  
+All hail Tsugumi Ohba and Takeshi Obata for this masterpiece 🙌.  
+</p>
