--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -10,9 +10,7 @@ import PublicationElement from '../components/PublicationElement.astro';
 	<div class="profile">
 		<h2 class="text-3xl w-full font-bold mb-5">Profile</h2>
 		<p class="mb-10 text-justify">
-			I am a Software Developer and Data Scientist with a wide ranging skillset, from web development to deep learning, to embedded systems programming.
-			However, my most useful skill is the ability to pick up new skills quickly and apply them to solve problems, which gives me the confidence and ability
-			to systematically tackle any novel problems I encounter.
+			I am Ishwar Balappanawar, a final-year B.Tech student at the International Institute of Information Technology Hyderabad (IIIT-H), pursuing Computer Science and Engineering. My research interests lie at the intersection of Machine Learning, Computer Vision, and Natural Language Processing, with a focus on knowledge-infused learning and model interpretability. I have a proven track record of contributing to impactful research projects and publications, alongside hands-on experience in both academic and industrial settings.
 		</p>
 	</div>
 
@@ -20,12 +18,8 @@ import PublicationElement from '../components/PublicationElement.astro';
 		<h2 class="text-3xl w-full font-bold mb-5">Education</h2>
 		<div class="time-line-container grid gap-4 mb-10">
 			<TimelineElement 
-			title="Bachelors of Technology in Computer Science and Engineering with Honours"
-			subtitle="July 2019 to June 2023 at the International Institute of Information Technology, Hyderabad, India" 
-			/>
-			<TimelineElement
-			title="High School"
-			subtitle="July 2015 to May 2019 at Indian School DSM, Dar-es-Salaam, Tanzania"
+			title="B.Tech in Computer Science and Engineering with Honors"
+			subtitle="November 2021 to May 2025 at the International Institute of Information Technology Hyderabad, India"
 			/>
 		</div>
 	</div>
@@ -34,10 +28,10 @@ import PublicationElement from '../components/PublicationElement.astro';
 		<h2 class="text-3xl w-full font-bold mb-5">Publications</h2>
 		<div class="grid gap-4 mb-10">
 			<PublicationElement
-			title="Sim-to-Real Deep Reinforcement Learning based Obstacle Avoidance for UAVs under Measurement Uncertainty"
-			authors="Joshi, Kapur, Kandath"
-			venue="arXiv 2023"
-			link="https://arxiv.org/abs/2303.07243"
+			title="Towards Infusing Auxiliary Knowledge for Distracted Driver Detection"
+			authors="Ishwar Balappanawar, Ashmit Chamoli, Ruwan Wickramarachchi, Aditya Mishra, Ponnurangam Kumaraguru, Amit P. Sheth"
+			venue="KiL 2024 Workshop on Knowledge-Infused Learning, co-located with the 30th ACM KDD Conference"
+			link="https://arxiv.org/pdf/2408.16621"
 			/>
 		</div>
 	</div>
@@ -46,46 +40,34 @@ import PublicationElement from '../components/PublicationElement.astro';
 		<h2 class="text-3xl w-full font-bold mb-5">Experience</h2>
 		<div class="time-line-container grid gap-4 mb-10">
 			<TimelineElement
-			title="Data Scientist"
-			subtitle="From July 2023 to Present at Microsoft IDC, Hyderabad"
-			>
-			NDA 🤫
-			</TimelineElement>
-			<TimelineElement
 			title="Research Intern"
-			subtitle="From September 2023 to November 2023 at Airbus"
+			subtitle="July 2024 to September 2024 at Microsoft Research, Bengaluru"
 			>
-			Testing the feasibility of UAV reconisance in GPS-denied closed-space environments. Developed a bridge application to interface with DJI drones through Python code.
+			Worked on synthetic data creation pipelines for computer vision applications, optimizing data retrieval using FAISS and CLIP, and implemented scalable workflows deployed on Kubernetes and Azure ML.
 			</TimelineElement>
 			<TimelineElement
-			title="Data Science/Machine Learning Intern"
-			subtitle="From May 2022 to July 2022 at Microsoft IDC, Hyderabad"
+			title="Software Engineer Intern"
+			subtitle="May 2024 to July 2024 at Microsoft IDC, Hyderabad"
 			>
-			Developed an inhouse Exploratory Data Analysis tool for the team and beyond. Optimized the general MLOps pipeline for the team's projects.
-			</TimelineElement>
-			<TimelineElement
-			title="Teaching Assistant for Digital Systems and Microcontrollers"
-			subtitle="From December 2021 to March 2022 at IIIT Hyderabad"
-			>
-			Incharge of taking practical Lab Sessions pertaining to digital circuits, logic gates and microcontrollers and teaching the relevant matter to students.
-			</TimelineElement>
-			<TimelineElement
-			title="Full Stack Intern"
-			subtitle="From June 2021 to August 2021 at Quriate"
-			>
-			Created the UI in Flutter and worked on the API endpoints in Django for the web application for the startup from scratch, to build a minimum viable product for demonstration to VCs.
+			Contributed to Azure Networking by developing impactful workflows and automating pipelines for Virtual Networks.
 			</TimelineElement>
 			<TimelineElement
 			title="Undergraduate Researcher"
-			subtitle="From May 2021 to July 2023 at the Robotics Research Center at IIIT Hyderabad"
+			subtitle="May 2023 to Present at the Precog Research Lab, IIIT Hyderabad"
 			>
-			Research focused primarily on learning based control of Unmanned Aerial Vehicles through Deep Reinforcement Learning under advisor Harikumar Kandath.
+			Focused on integrating knowledge graphs into transformer-based language models and enhancing reasoning tasks for autonomous systems.
 			</TimelineElement>
 			<TimelineElement
-			title="Technical Head and Coordinator"
-			subtitle="From July 2020 to December 2021 at the Open Source Development Group at IIIT Hyderabad"
+			title="Full Stack Developer Intern"
+			subtitle="January 2023 to May 2023 at Own A Home, Hyderabad"
 			>
-			Incharge of organizing and conducting workships and events for promoting open source development and contributing to open source projects for the student body.
+			Designed and implemented a blockchain-based fractional real estate investment platform with integrated insurance mechanisms.
+			</TimelineElement>
+			<TimelineElement
+			title="Teaching Assistant"
+			subtitle="2023-2024 at IIIT Hyderabad"
+			>
+			Conducted tutorials and office hours for courses including Probability and Statistics, and Linear Algebra, creating supplementary resources for students.
 			</TimelineElement>
 		</div>
 	</div>
@@ -93,17 +75,17 @@ import PublicationElement from '../components/PublicationElement.astro';
 	<div class="skills">
 		<h2 class="text-3xl w-full font-bold mb-5">Skills</h2>
 		<ul class="list-disc md:columns-5 columns-2 mx-6">
+			<li>Machine Learning</li>
+			<li>Natural Language Processing</li>
+			<li>Computer Vision</li>
 			<li>Deep Learning</li>
-			<li>Reinforcement Learning</li>
-			<li>Full Stack Web Development</li>
-			<li>Mobile Development</li>
-			<li>Game Development</li>
-			<li>DevOps/MLOps</li>
-			<li>Embedded Systems Programming</li>
-			<li>UI/UX Design</li>
-			<li>Graphics Design</li>
-			<li>3D Modelling</li>
-		  </ul>
+			<li>Blockchain Development</li>
+			<li>Full Stack Development</li>
+			<li>Python</li>
+			<li>C++</li>
+			<li>Rust</li>
+			<li>Docker/Kubernetes</li>
+		</ul>
 	</div>
 
 </MainLayout>
