--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,7 +27,7 @@ import '../styles/global.css';
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔮</text></svg>">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-        <title>Dhruv Kapur | {pageTitle}</title>
+        <title>Ishwar Balappanawar | {pageTitle}</title>
     </head>
     <body>
         <Header/>
