--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,10 +4,10 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 <MainLayout pageTitle="404" showSidebar={false}>
     <div class="text-center">
-        <h1 class="text-9xl mb-4">🧐</h1>
+        <h1 class="text-9xl mb-4">🧐 OwO What's this?</h1>
         <h1 class="text-9xl font-bold mb-4">404</h1>
         <h1 class="text-5xl font-semibold mb-4">Hmmm...</h1>
-        <h3 class="text-2xl font-light">How did you end up here? Let's get you back home!</h3>
+        <h3 class="text-2xl font-light">How did you end up here? UwU Let's get you back home!</h3>
         <a href="/" class="btn btn-secondary mt-9">Get me outta here!</a>
     </div>
 </MainLayout>
