--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,25 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
-import EmptyBlogComponent from "../components/EmptyBlogComponent.astro";
----
+import MainLayout from '../../layouts/MainLayout.astro';
+import BlogCard from '../../components/BlogCard.astro';
+import EmptyBlogComponent from '../../components/EmptyBlogComponent.astro';
+import { getCollection } from 'astro:content';
 
-<MainLayout pageTitle="Blog">
+export async function getStaticPaths({ paginate }) {
+    const posts = await getCollection("blog");
+    posts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+    return paginate(posts, { pageSize: 10 });
+  }
+
+const {page} = Astro.props;
+
+---  
+
+<MainLayout pageTitle="Blog" activeItemID="blog">
     <h1 class="text-5xl font-bold mb-10">Blog</h1>
     <div class="mt-10">
 		<div class="divider"></div> 
-    <EmptyBlogComponent />
+		{(page.data.length > 0) ? page.data.map(blog => (
+			<BlogCard {blog} />
+		)): <EmptyBlogComponent/>}
+	</div>
 </MainLayout>
