--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
-import MainLayout from '../../layouts/MainLayout.astro';
-import BlogCard from '../../components/BlogCard.astro';
-import EmptyBlogComponent from '../../components/EmptyBlogComponent.astro';
+import MainLayout from '../layouts/MainLayout.astro';
+import BlogCard from '../components/BlogCard.astro';
+import EmptyBlogComponent from '../components/EmptyBlogComponent.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths({ paginate }) {
