--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,11 +5,7 @@ import axios from 'axios';
 
 
 const projectsList = [
-	"DJIControlServer",
-	"DJIControlClient",
-	"ReMade",
-	"Kontrolla",
-	"WireDoge",
+	"KiD3"
 ]
 
 
