--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
         </label>
     </div> 
     <div class="navbar-center">
-        <a class="btn btn-ghost normal-case text-xl" href="/">Dhruv Kapur 🥋</a>
+        <a class="btn btn-ghost normal-case text-xl" href="/">Ishwar </a>
       </div>
       <div class="navbar-end"></div>
 </div>
