--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,18 +8,17 @@ export async function getStaticPaths({ paginate }) {
     const posts = await getCollection("blog");
     posts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
     return paginate(posts, { pageSize: 10 });
-  }
+}
 
-const {page} = Astro.props;
-
----  
+const { page } = Astro.props;
+---
 
 <MainLayout pageTitle="Blog" activeItemID="blog">
     <h1 class="text-5xl font-bold mb-10">Blog</h1>
     <div class="mt-10">
-		<div class="divider"></div> 
-		{(page.data.length > 0) ? page.data.map(blog => (
-			<BlogCard {blog} />
-		)): <EmptyBlogComponent/>}
-	</div>
+        <div class="divider"></div> 
+        {(page?.data?.length > 0) ? page.data.map(blog => (
+            <BlogCard {blog} />
+        )) : <EmptyBlogComponent/>}
+    </div>
 </MainLayout>
