--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,17 @@ import ProjectCard from '../components/ProjectCard.astro';
 import axios from 'axios';
 
 const projectsList = [
-	"KiD3"
+	"KiD3",
+	"Viking",
+	"few-software-engineering-projects",
+	"Fun-with-Data",
+	"Greddit",
+	"ISHell",
+	"Epilepsy-Detection",
+	"3D-Car-Racing-Game",
+	"JetpackJoyride",
+	"Enhanching-xv6",
+	"Automata-Battle---Rock-Paper-Scissors",
 ];
 
 let projectsResponses = [];
