--- a/src/components/TrueIntro.astro
+++ b/src/components/TrueIntro.astro
@@ -9,7 +9,7 @@ const vowelStart = ['a', 'e', 'i', 'o', 'u'].some((vowel) => {
 <h1 class="text-5xl font-bold my-5" id="easterEgg1">I'm Ishwar Balappanawar</h1>
 <h1 class="text-3xl font-semibold mt-3 mb-8" id="easterEgg2">Undergraduate Researcher and Aspiring AI Scientist</h1>
 <p class="text-xl">
-Hello! I'm currently working as {vowelStart ? 'an' : 'a'} <b>{data.role}</b> at <b>{data.lab}, {data.university}</b>.  
+Hello! I'm currently working as {vowelStart ? 'an' : 'a'} <b>{data.role}</b> at <b>{data.company}, {data.city}</b>.  
 I'm a penultimate-year B.Tech student at the International Institute of Information Technology Hyderabad (IIIT-H), pursuing Computer Science and Engineering.  
 My research interests lie at the intersection of Machine Learning, Computer Vision, and Natural Language Processing, with a particular focus on knowledge-infused learning and model interpretability.  
 Currently, I'm exploring innovative approaches to enhance model understanding and reasoning capabilities.  
