--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,6 +9,14 @@ const projectsList = [
 	"few-software-engineering-projects",
 	"Fun-with-Data",
 	"Greddit",
+];
+
+const projectsList2 = [
+	"KiD3",
+	"Viking",
+	"few-software-engineering-projects",
+	"Fun-with-Data",
+	"Greddit",
 	"ISHell",
 	"Epilepsy-Detection",
 	"3D-Car-Racing-Game",
