--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,8 @@ import { getCollection } from 'astro:content';
 export async function getStaticProps() {
     const posts = await getCollection("blog");
     posts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
-    return { props: { posts } };
+    console.log(posts); // Log the posts to the console
+    return { props: { posts: posts || [] } };
 }
 
 const { posts } = Astro.props;
@@ -17,7 +18,7 @@ const { posts } = Astro.props;
     <h1 class="text-5xl font-bold mb-10">Blog</h1>
     <div class="mt-10">
         <div class="divider"></div>
-        {(posts.length > 0) 
+        {(posts && posts.length > 0) 
           ? posts.map(blog => (
               <BlogCard blog={blog} />
           ))
