--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,6 @@ const year = new Date().getFullYear();
 
 <footer class="footer footer-center w-full block p-4 bg-base-300 text-base-content">
     <div>
-      <p>Copyright © {year} - All rights reserved by Dhruv Kapur</p>
+      <p>Derived from <a href="https://github.com/dkapur17" target="_blank" rel="noopener noreferrer" class="link">Dhruv Kapur</a> - All rights reserved.</p>
     </div>
 </footer>
