--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -25,4 +25,7 @@ const { posts } = Astro.props;
           : <EmptyBlogComponent />
         }
     </div>
+    <div>
+    {posts}
+    </div>
 </MainLayout>
